# LaWAM

./: .gitignore  README.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: .gitignore-checkpoint
configs/ablation/: full_bidirectional.yaml  one_way_future_to_action.yaml
configs/debug/: interndata_a1_8gpu_smoke.yaml  interndata_a1_8gpu_t5_smoke.yaml  interndata_a1_action_overfit.yaml  interndata_a1_future_overfit.yaml  interndata_a1_resume_audit.yaml  interndata_a1_stage1_full_sim_pilot.yaml  interndata_a1_tiny_overfit.yaml
configs/h800/: mixture_stage1_pilot.yaml
configs/train/: interndata_a1_joint.yaml  stage1_future.yaml  stage2_action_warmup.yaml  stage3_joint.yaml
outputs/preflight/: t5_a100_20260722-112053.json
scripts/: train_8gpu.sh
scripts/debug/: bringup_8gpu.sh  preflight.sh  preflight_full.sh  preflight_t5_a100.sh  run_1gpu_smoke.sh  run_8gpu_smoke.sh  run_8gpu_t5_smoke.sh  run_checkpoint_audit.sh  run_resume_audit.sh  run_stage1_full_sim_pilot.sh  run_strict_overfit.sh  run_tests.sh  run_tiny_overfit.sh
scripts/h800/: audit_storage_manifest.sh  compact_storage_manifest.sh  launch_4node.sh
src/latent_wam/: __init__.py  checkpoint.py  checkpoint_audit.py  config.py  data_probe.py  distributed.py  manifest_audit.py  manifest_compact.py  objective.py  preflight.py  resume_audit.py  train.py  types.py
tests/: test_config.py  test_data_probe.py  test_joint_attention.py  test_manifest_audit.py  test_manifest_compact.py  test_mixture.py  test_objective.py  test_preflight.py  test_public_api.py  test_schema.py  test_stage.py
(+53 files in other folders)
