[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latent-wam"
version = "0.1.0"
description = "Joint latent-future and action prediction inside a V-JEPA 2.1 predictor"
requires-python = ">=3.12,<3.13"
dependencies = [
  "av>=12.0",
  "einops>=0.7",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=15.0",
  "pyyaml>=6.0",
  "safetensors>=0.4",
  "sentencepiece>=0.2",
  "timm>=1.0",
  "torch>=2.4",
  "torchvision>=0.19",
  "transformers>=4.46",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
latent-wam-train = "latent_wam.train:main"
latent-wam-preflight = "latent_wam.preflight:main"
latent-wam-data-probe = "latent_wam.data_probe:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
